--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/SignUp"
+        android:id="@+id/signuptologin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SignUp"
